[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ignore"
version = "0.0.1"
authors = [{ name = "Magnus167" }]
description = "A simple python module to parse .gitignore files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
# dependencies = []

[project.urls]
Home = "https://github.com/Magnus167/py-ignore"
Documentation = "https://github.com/Magnus167/py-ignore/blob/main/README.md"


[tool.setuptools]
platforms = ["Windows", "Linux", "Mac OS-X"]

[tool.setuptools.packages.find]
include = ["py_ignore", "py_ignore.*"]
